# necroman

./: .gitignore  camp.json  mongo_sync.js  package-lock.json  package.json
necroman_node/: LICENSE  app.js  db.json  expression.json  gangers.json  mongo_sync.mongodb  package-lock.json  package.json
necroman_python/: get_camp_data.py  get_gangers.py  get_webdriver.py  main.py  pyproject.toml  requirements.txt
necroman_python/generators/: cawdor_gen.py
necroman_python/necrovox_docs/: gangs copy.md  gangs.md  rules.md
necroman_python/open_api/: necrovox_spec copy 2.yaml  necrovox_spec.yaml  openapi_schema.yaml
necroman_python/prompts/: base_instructions.md
necroman_python/rolls/: wound_roll.py
necroman_python/static/: index.html  styles.css
