[tool.poetry]
name = "necroman-langserve"
version = "0.1.0"
description = "A way to work with langserve to play Necromunda"
authors = ["Dave Carmocan <yakuzadave@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
fastapi = "^0.105.0"
requests = "^2.32.2"
tenacity = "^8.2.3"
termcolor = "^2.4.0"
openai = "^1.6.1"
d20 = "^1.1.2"
gradio = "^4.14.0"
langchain = "^0.1.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"